# capacitor-duckdb

./: .gitattributes  .gitignore  AGENTS.md  BangonkaliCapacitorDuckdb.podspec  LICENSE.txt  PLAN.md  Package.swift  README.md  bitrise.yml  lfs.sh  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
.github/workflows/: build-android.yml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  duckdb_jni.cpp
android/src/main/cpp/include/: .gitignore  README.md  duckpgq_extension.hpp
android/src/main/java/ph/com/regalado/capacitor/duckdb/: CapacitorDuckDb.java  CapacitorDuckDbPlugin.java  DuckDBNative.java
android/src/main/jniLibs/: .gitignore  README.md
docs/: ARCHITECTURE.md  BUILDING.md  E2E_TESTING.md  RELEASING.md  TOKENIZER_PLAN.md  TROUBLESHOOTING.md  TYPE_MAPPINGS.md
example-app/: .gitignore  README.md  capacitor.config.json  package-lock.json  package.json  vite.config.ts
example-app/android/: capacitor.settings.gradle
example-app/android/app/: capacitor.build.gradle
example-app/ios/App/: Podfile
example-app/ios/App/App.xcodeproj/: project.pbxproj
example-app/scripts/: download-geodata.mjs
example-app/src/: App.tsx  index.html  main.tsx
example-app/src/components/map/: DrawingToolbar.css  DrawingToolbar.tsx  LayerSelector.css  LayerSelector.tsx  MapView.tsx
example-app/src/components/spatial/: DemoPageTemplate.css  DemoPageTemplate.tsx  FunctionCard.css  FunctionCard.tsx
example-app/src/data/: geojson.d.ts  naturalEarth.ts
example-app/src/pages/: DemosTab.tsx  DuckPGQDemo.tsx  QueryTab.tsx  SettingsTab.css  SettingsTab.tsx  SpatialTab.css  SpatialTab.tsx  TaxiTab.tsx  TestTab.tsx  TodoTab.tsx
example-app/src/pages/spatial/: AggregatesDemo.tsx  ConstructorsDemo.tsx  IODemo.tsx  LineOpsDemo.tsx  MeasurementsDemo.tsx  PredicatesDemo.tsx  ProcessingDemo.tsx  TransformsDemo.tsx
example-app/src/services/: duckdb.ts  settingsService.ts  spatialService.ts
example-app/src/tests/: TestRegistry.ts  TestRunner.ts  index.ts  types.ts  utils.ts
example-app/src/tests/core/: basic.ts  ddl.ts  dml.ts  errors.ts  types.ts
example-app/src/tests/plugins/: spatial.ts  vss.ts
example-app/src/theme/: variables.css
ios/: .gitignore
ios/Frameworks/: .gitkeep  README.md
ios/Sources/CapacitorDuckDbPlugin/: CapacitorDuckDb.swift  CapacitorDuckDbPlugin.swift  duckdb_ios.cpp  duckdb_ios.hpp
ios/Sources/CapacitorDuckDbPlugin/include/: .gitkeep  README.md  module.modulemap
ios/Tests/CapacitorDuckDbPluginTests/: CapacitorDuckDbPluginTests.swift
scripts/: build-android.ps1  build-android.sh  build-example-android.ps1  build-example-android.sh  build-example-ios.sh  build-ios.sh  check-release-assets.js  install-binaries.js  prepare-demo-database.mjs  publish.sh  verify-spatial.sh
src/: definitions.ts  index.ts  web.ts
